19-Ingress/03-demo-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: hellonginx
  replicas: 2
  template:
    metadata:
      labels:
        app: hellonginx
    spec:
      containers:
      - name: hello
        image: nginx


---
apiVersion: v1
kind: Service
metadata:
  name: ninxservice
  namespace: dev
  labels:
    app: hellonginx
spec:
  type: ClusterIP
  selector:
    app: hellonginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
