19-Ingress/04-ingress-for-demoapp-test.yaml
## Simple Example of Ingress backed by a single Service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: dev
spec:
  defaultBackend:
     service:
       name: hello-service
       port:
         number: 80
  rules:
    - host: test.local
      http:
        paths:
        - path: "/nginx"
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
