19-Ingress/04-ingress-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: dev
spec:
  rules:
  - host: "test.local"
    http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: hello-service
            port:
              number: 80
  - host: "test.local"
    http:
      paths:
      - pathType: Prefix
        path: "/dinesh"
        backend:
          service:
            name: ninxservice
            port:
              number: 80
