19-Ingress/06-eimple-fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  namespace: dev
spec:
  rules:
  - host: fanout.hello.local
    http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 8080
